# rustchat

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  create-tables.sql  docker-compose.yml
.sqlx/: query-49ea9322412239181c93db91d09334fd6191db1d0445ebe4413670903c97d861.json  query-59432dd6f2daf0e88c8aca245e57b3b7fcdd477794110b3c5b840cedcaf198aa.json  query-86123e1c10cd705f2df8e55ae933af96daf9ef43ba06955fcd508085bf41e212.json  query-a1925b8e64bb508964c3d4b032fc7da4c0ad69663d94c414888eb752adfb1f8a.json  query-f176b2d6274ee6c34f7430f7c21ea29a5429093a23e2f59ce175a7d7bd8872d5.json
WebContent/: index.html  index.js  login.html  login.js  styles.css
migrations/: 20250901014324_init.sql
src/: authorization.rs  login.rs  main.rs  messages.rs  protected_routes.rs  state.rs
